Reemplazadas las llamadas a AppSettings.

--- a/Core/View/Login/Login.html.twig
+++ b/Core/View/Login/Login.html.twig
@@ -10,7 +10,7 @@
                     <input type="hidden" name="action" value="login">
                     <div class="card mt-4">
                         <a href="{{ asset('login') }}">
-                            {% set idfile = appSettings.get('default','idloginimage', 0) %}
+                            {% set idfile = settings('default','idloginimage', 0) %}
                             {{ _self.loadLogo(idfile) }}
                         </a>
                         <div class="card-body">
