--- a/Core/View/Wizard.html.twig
+++ b/Core/View/Wizard.html.twig
@@ -36,7 +36,7 @@
     <!-- Macros Template Imports -->
     {% import 'Macro/Forms.html.twig' as forms %}
     {% set ciudad = fsc.empresa ? fsc.empresa.ciudad : '' %}
-    {% set codpais = fsc.empresa ? fsc.empresa.codpais : appSettings.get('default', 'codpais', 'ESP') %}
+    {% set codpais = fsc.empresa ? fsc.empresa.codpais : settings('default', 'codpais', 'ESP') %}
     {% set provincia = fsc.empresa ? fsc.empresa.provincia : '' %}
 
     <div class="container" style="margin-top: -100px;">
