--- a/Core/View/SendMail.html.twig
+++ b/Core/View/SendMail.html.twig
@@ -120,8 +120,8 @@
                             </div>
                             <div class="row align-items-end">
                                 <div class="col-sm-6">
-                                    {% if appSettings.get('email', 'replytouseremail', '1') in ['1', '0'] %}
-                                        {% set check = appSettings.get('email', 'replytouseremail') == '1' ? 'checked' : '' %}
+                                    {% if settings('email', 'replytouseremail', '1') in ['1', '0'] %}
+                                        {% set check = settings('email', 'replytouseremail') == '1' ? 'checked' : '' %}
                                         <div class="form-check">
                                             <input type="checkbox" name="replyto" value="1" {{ check }}
                                                    class="form-check-input" id="replytoCheck"/>
