--- a/Core/View/Tab/RefundFacturaProveedor.html.twig
+++ b/Core/View/Tab/RefundFacturaProveedor.html.twig
@@ -87,7 +87,7 @@
                                     <select name="codserie" class="form-control">
                                         {% for serie in fsc.series() %}
                                             {% if serie.tipo is same as('R') %}
-                                                {% if serie.codserie == appSettings.get('default','codserierec','R') %}
+                                                {% if serie.codserie == settings('default','codserierec','R') %}
                                                     <option value="{{ serie.codserie }}" selected>
                                                         {{ serie.descripcion }}
                                                     </option>
