--- a/Core/View/Tab/AttachedFilePreview.html.twig
+++ b/Core/View/Tab/AttachedFilePreview.html.twig
@@ -22,12 +22,12 @@
     {% elseif file.getExtension() == 'mp4' %}
         <div class="embed-responsive embed-responsive-16by9">
             <video width="320" height="240" controls>
-                <source src="{{ asset(file.url('download-permanent')) }}" type="video/mp4" />
+                <source src="{{ asset(file.url('download-permanent')) }}&embed=true" type="video/mp4" />
             </video>
         </div>
     {% elseif file.getExtension() == 'pdf' %}
         <div class="embed-responsive embed-responsive-16by9">
-            <embed src="{{ asset(file.url('download-permanent')) }}" type="application/pdf" />
+            <embed src="{{ asset(file.url('download-permanent')) }}&embed=true" type="application/pdf" />
         </div>
     {% endif %}
 </div>
