--- a/Core/View/Master/ListView.html.twig
+++ b/Core/View/Master/ListView.html.twig
@@ -262,7 +262,7 @@
             <button type="button" class="btn btn-light" onclick="listViewShowFilters('{{ viewName }}');">
                 <i class="fas fa-filter fa-fw"></i> {{ trans('filters') }}
             </button>
-            {% if currentView.showFilters %}
+            {% if currentView.showFilters and isInstanceof(fsc, 'ListController') %}
                 {# -- Save user filters -- #}
                 <button type="button" class="btn btn-success" data-toggle="modal"
                         data-target="#savefilter{{ viewName }}"
