--- a/Core/View/Tab/RoleAccess.html.twig
+++ b/Core/View/Tab/RoleAccess.html.twig
@@ -19,7 +19,7 @@
     <input type="hidden" name="activetab" value="{{ fsc.getCurrentView().getViewName() }}"/>
     <div class="card shadow">
         <div class="card-body text-right">
-            <button type="submit" class="btn btn-sm btn-primary">
+            <button type="submit" class="btn btn-sm btn-primary btn-spin-action">
                 <i class="fas fa-save fa-fw"></i> {{ trans('save') }}
             </button>
         </div>
@@ -191,7 +191,7 @@
             </table>
         </div>
         <div class="card-body text-right">
-            <button type="submit" class="btn btn-sm btn-primary">
+            <button type="submit" class="btn btn-sm btn-primary btn-spin-action">
                 <i class="fas fa-save fa-fw"></i> {{ trans('save') }}
             </button>
         </div>
