--- a/Core/View/AdminPlugins.html.twig
+++ b/Core/View/AdminPlugins.html.twig
@@ -48,7 +48,8 @@
                     </button>
                 {% endif %}
                 <div class="btn-group">
-                    <a href="{{ fsc.url() }}?action=rebuild&multireqtoken={{ formToken(false) }}" onclick="animateSpinner('add')"
+                    <a href="{{ fsc.url() }}?action=rebuild&multireqtoken={{ formToken(false) }}"
+                       onclick="animateSpinner('add')"
                        class="btn btn-spin-action btn-sm btn-warning">
                         <i class="fas fa-hammer fa-fw" aria-hidden="true"></i>
                         <span class="d-none d-sm-inline-block">{{ trans('rebuild') }}</span>
@@ -101,7 +102,8 @@
 
     {# Modal for add new plugins #}
     {% if not constant('FS_DISABLE_ADD_PLUGINS') %}
-        <form action="{{ fsc.url() }}" name="upload-plugins" method="post" class="form" enctype="multipart/form-data" onsubmit="animateSpinner('add')">
+        <form action="{{ fsc.url() }}" name="upload-plugins" method="post" class="form" enctype="multipart/form-data"
+              onsubmit="animateSpinner('add')">
             {{ formToken() }}
             <input type="hidden" name="action" value="upload"/>
             <div class="modal fade" id="modalAddPlugin" tabindex="-1" role="dialog" aria-hidden="true">
@@ -132,7 +134,8 @@
                             <div class="text-right mt-5">
                                 <button type="button" class="btn btn-spin-action btn-secondary"
                                         data-dismiss="modal">{{ trans('cancel') }}</button>
-                                <button type="submit" class="btn btn-spin-action btn-primary">{{ trans('continue') }}</button>
+                                <button type="submit"
+                                        class="btn btn-spin-action btn-primary">{{ trans('continue') }}</button>
                             </div>
                         </div>
                     </div>
@@ -282,15 +285,12 @@
                                 {{ trans('more') }} <i class="fas fa-external-link-alt"></i>
                             </a>
                         {% endif %}
-
-                        <br />
-                        {% if plugin.require|length > 0 %}
-                            {% for requiredPluginName in plugin.require %}
-                                <div class="badge badge-pill badge-danger p-2 my-1">
-                                    {{ trans('plugin-needed', {'%pluginName%': requiredPluginName}) }}
-                                </div>
-                            {% endfor %}
-                        {% endif %}
+                        <br/>
+                        {% for requiredPluginName in plugin.require %}
+                            <div class="badge badge-secondary">
+                                {{ trans('plugin-needed', {'%pluginName%': requiredPluginName}) }}
+                            </div>
+                        {% endfor %}
                     </td>
                     <td class="text-right text-nowrap">
                         {% if plugin.hasUpdate() %}
