Añadida función executionTime() a twig, para poder mostrar el tiempo de ejecución, en segundos.

--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -168,13 +168,14 @@
     {% for item in getIncludeViews('MenuTemplate', 'JsFooter') %}
         {% include item['path'] %}
     {% endfor %}
-    <br/>
-    <br/>
-    <br/>
-    {{ debugBarRender.render() | raw }}
     {% for item in getIncludeViews('MenuTemplate', 'BodyEnd') %}
         {% include item['path'] %}
     {% endfor %}
+    {{ debugBarRender.render() | raw }}
+    <br/>
+    <br/>
+    <br/>
+    <!-- execution time: {{ executionTime() }} s -->
     </body>
 {% endblock %}
 </html>
