--- a/Core/View/Master/MicroTemplate.html.twig
+++ b/Core/View/Master/MicroTemplate.html.twig
@@ -65,6 +65,7 @@
             {% block body %}
             {% endblock %}
             {{ debugBarRender.render() | raw }}
+            <!-- execution time: {{ executionTime() }} s -->
         </body>
     {% endblock %}
 </html>
