Ahora al abrir la tarjeta de añadir en un EditListView, se coloca el cursor en el primer input de texto.

--- a/Core/View/Master/EditListView.html.twig
+++ b/Core/View/Master/EditListView.html.twig
@@ -72,6 +72,14 @@
                 </div>
             </div>
         </form>
+
+        <script>
+            $(document).ready(function () {
+                $('#{{ formName }}Collapse').on('shown.bs.collapse', function () {
+                    $('#{{ formName }}Collapse input[type="text"]').first().focus();
+                });
+            });
+        </script>
     {% endif %}
 
     {# -- Forms -- #}
