--- a/Core/View/Master/PanelControllerBottom.html.twig
+++ b/Core/View/Master/PanelControllerBottom.html.twig
@@ -21,7 +21,7 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="form-row">
             <div class="col">
                 {# -- First view -- #}
                 {% set firstView = fsc.views | first %}
@@ -31,7 +31,7 @@
             </div>
         </div>
         {% if fsc.views | length > 2 %}
-            <div class="row">
+            <div class="form-row">
                 <div class="col">
                     <ul class="nav nav-pills mb-3 d-print-none" id="mainTabs" role="tablist">
                         {% set contActiveTab = 0 %}
