--- a/Core/View/Master/PanelControllerLeftBottom.html.twig
+++ b/Core/View/Master/PanelControllerLeftBottom.html.twig
@@ -1,7 +1,7 @@
 {#
     /**
      * This file is part of FacturaScripts
-     * Copyright (C) 2017-2022 Carlos Garcia Gomez <carlos@facturascripts.com>
+     * Copyright (C) 2017-2023 Carlos Garcia Gomez <carlos@facturascripts.com>
      *
      * This program is free software: you can redistribute it and/or modify
      * it under the terms of the GNU Lesser General Public License as
@@ -21,7 +21,7 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="form-row">
             <div class="col">
                 {# -- First view -- #}
                 {% set firstView = fsc.views | first %}
@@ -35,7 +35,7 @@
                 ? fsc.views[1:]|keys|first
                 : fsc.active
             %}
-            <div class="row">
+            <div class="form-row">
                 {# -- Left Panel -- #}
                 <div class="col-lg-2">
                     <div class="nav nav-pills flex-row flex-lg-column pb-3" id="mainTabs" role="tablist">
