--- a/Core/View/Tab/PreviewFiles.html.twig
+++ b/Core/View/Tab/PreviewFiles.html.twig
@@ -35,7 +35,7 @@
                             {{ _self.inputTextArea('') }}
                             <div class="form-row align-items-end">
                                 <div class="col">
-                                    <input type="file" name="new-file" class="form-control-file" required />
+                                    <input type="file" name="new-files[]" class="form-control-file" required />
                                     <p class="text-muted mb-0">{{ trans('help-server-accepts-filesize', {'%size%': currentView.model.getMaxFileUpload()}) }}</p>
                                 </div>
                                 <div class="col text-right">
