--- a/Core/View/Login/Login.html.twig
+++ b/Core/View/Login/Login.html.twig
@@ -24,7 +24,7 @@
                                     </span>
                                     <input type="text" name="fsNick" class="form-control" maxlength="50"
                                            placeholder="{{ trans('user') }}" required autocomplete="off"
-                                           autofocus=""/>
+                                           autofocus/>
                                 </div>
                             </div>
                             <div class="form-group">
