identificar vistas mediante clases css

--- a/Core/View/Master/EditListViewInLine.html.twig
+++ b/Core/View/Master/EditListViewInLine.html.twig
@@ -26,7 +26,7 @@
     var editListViewDeleteTitle = "{{ trans('confirm-delete') }}";
 </script>
 
-<div class="{{ currentView.settings.card ? '' : 'container-fluid' }}">
+<div class="{{ currentView.settings.card ? '' : 'container-fluid' }} View-Master-EditListViewInLine">
     {# -- Row header -- #}
     <div class="row">
         {% set row = currentView.getRow('header') %}
