--- a/Core/View/Master/EditView.html.twig
+++ b/Core/View/Master/EditView.html.twig
@@ -52,7 +52,7 @@
 </script>
 
 {# -- Row header -- #}
-<div class="row">
+<div class="row View-Master-EditView">
     {% set row = currentView.getRow('header') %}
     {{ row.render(currentView.getViewName(), '', fsc) | raw }}
 </div>
