--- a/Core/View/Master/ListController.html.twig
+++ b/Core/View/Master/ListController.html.twig
@@ -23,7 +23,7 @@
     {{ parent() }}
     {% set pageData = fsc.getPageData() %}
     {% set firstView = fsc.views | first %}
-    <div class="container-fluid mb-3 d-print-none">
+    <div class="container-fluid mb-3 d-print-none View-Master-ListController">
         <div class="row">
             <div class="col-md-7">
                 {# -- Page data for small devices -- #}
