--- a/Core/View/Master/MenuBgTemplate.html.twig
+++ b/Core/View/Master/MenuBgTemplate.html.twig
@@ -20,7 +20,7 @@
 {% extends "Master/MenuTemplate.html.twig" %}
 
 {% block fullBody %}
-    <body class="bg-light">
+    <body class="bg-light View-Master-MenuBgTemplate">
     {% block navbar %}
         {{ parent() }}
     {% endblock %}
