--- a/Core/View/Master/MenuBghTemplate.html.twig
+++ b/Core/View/Master/MenuBghTemplate.html.twig
@@ -20,7 +20,7 @@
 {% extends "Master/MenuTemplate.html.twig" %}
 
 {% block fullBody %}
-    <body>
+    <body class="View-Master-MenuBghTemplate">
     {% block navbar %}
         {{ parent() }}
     {% endblock %}
