--- a/Core/View/Master/MicroTemplate.html.twig
+++ b/Core/View/Master/MicroTemplate.html.twig
@@ -55,7 +55,7 @@
         {% endif %}
     </head>
     {% block fullBody %}
-        <body>
+        <body class="View-Master-MicroTemplate">
             {% block messages %}
                 {% include 'Macro/Toasts.html.twig' %}
                 {% from 'Macro/Utils.html.twig' import message as showMessage %}
