--- a/Core/View/Master/PanelController.html.twig
+++ b/Core/View/Master/PanelController.html.twig
@@ -23,7 +23,7 @@
     {{ parent() }}
     {% set pageData = fsc.getPageData() %}
     {% set firstView = fsc.views | first %}
-    <div class="container-fluid d-print-none">
+    <div class="container-fluid d-print-none View-Master-PanelController">
         <div class="form-row">
             <div class="col-md-12">
                 {# -- Hidden alternative page info -- #}
