--- a/Core/View/Master/PanelControllerBottom.html.twig
+++ b/Core/View/Master/PanelControllerBottom.html.twig
@@ -20,7 +20,7 @@
 {% extends "Master/PanelController.html.twig" %}
 
 {% block body %}
-    <div class="container-fluid">
+    <div class="container-fluid View-Master-PanelControllerBottom">
         <div class="form-row">
             <div class="col">
                 {# -- First view -- #}
