--- a/Core/View/Master/ListView.html.twig
+++ b/Core/View/Master/ListView.html.twig
@@ -27,7 +27,7 @@
     var listViewDeleteTitle = "{{ trans('confirm-delete') }}";
 </script>
 
-<form id="{{ formName }}" method="post" onsubmit="animateSpinner('add')">
+<form id="{{ formName }}" method="post" onsubmit="animateSpinner('add')" class="View-Master-ListView-{{ currentView.getViewName() }}">
     {{ formToken() }}
     <input type="hidden" name="action"/>
     <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
