--- a/Core/View/AdminPlugins.html.twig
+++ b/Core/View/AdminPlugins.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * This file is part of FacturaScripts
- * Copyright (C) 2017-2023 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2017-2024 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -313,11 +313,29 @@
                                     <i class="fas fa-trash-alt" aria-hidden="true"></i>
                                 </a>
                             {% endif %}
-                            <a class="btn btn-sm btn-success btn-spin-action" onclick="animateSpinner('add');"
-                               href="{{ fsc.url() }}?action=enable&amp;plugin={{ plugin.name }}&amp;multireqtoken={{ formToken(false) }}">
-                                <i class="fas fa-check" aria-hidden="true"></i>
-                                <span class="d-none d-sm-inline-block">{{ trans('enable') }}</span>
-                            </a>
+                            {% if plugin.hasUpdate() %}
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-warning dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                        {{ trans('enable') }}
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="Updater">
+                                            <i class="fas fa-cloud-download-alt fa-fw mr-1" aria-hidden="true"></i> {{ trans('update') }}
+                                        </a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item"
+                                           href="{{ fsc.url() }}?action=enable&amp;plugin={{ plugin.name }}&amp;multireqtoken={{ formToken(false) }}">
+                                            <i class="fas fa-check fa-fw mr-1" aria-hidden="true"></i> {{ trans('enable') }}
+                                        </a>
+                                    </div>
+                                </div>
+                            {% else %}
+                                <a class="btn btn-sm btn-success btn-spin-action" onclick="animateSpinner('add');"
+                                    href="{{ fsc.url() }}?action=enable&amp;plugin={{ plugin.name }}&amp;multireqtoken={{ formToken(false) }}">
+                                    <i class="fas fa-check" aria-hidden="true"></i>
+                                    <span class="d-none d-sm-inline-block">{{ trans('enable') }}</span>
+                                </a>
+                            {% endif %}
                         {% else %}
                             {{ plugin.compatibilityDescription() }}
                         {% endif %}
