Añadida extensiones para DocFiles

--- a/Core/View/Tab/DocFiles.html.twig
+++ b/Core/View/Tab/DocFiles.html.twig
@@ -26,6 +26,9 @@
                                     <p class="text-muted mb-0">
                                         {{ trans('help-server-accepts-filesize', {'%size%': currentView.model.getMaxFileUpload()}) }}
                                     </p>
+                                    {% for item in getIncludeViews('DocFiles', 'formAddBody') %}
+                                        {% include item['path'] %}
+                                    {% endfor %}
                                 </div>
                                 <div class="col text-right">
                                     <button type="submit" class="btn btn-sm btn-success">
@@ -75,6 +78,9 @@
                                 <textarea name="observations" class="form-control"
                                           placeholder="{{ trans('observations') }}">{{ docfile.observations | raw }}</textarea>
                                 </div>
+                                {% for item in getIncludeViews('DocFiles', 'formEditBody') %}
+                                    {% include item['path'] %}
+                                {% endfor %}
                                 <p class="card-text text-muted">
                                     {% if docfile.nick %}
                                         <i class="fas fa-user"></i> {{ docfile.nick }}
